# escrin

./: .dockerignore  .gitignore  .gitmodules  .prettierrc  README.md  oasisprotocol-sapphire-paratime-1.1.0.tgz  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: FUNDING.yml
.github/workflows/: evm.yaml  runner-image.yaml  ssss.yaml  worker.yaml
docs/.astro/: types.d.ts
enclave-identity/: hardhat.config.ts  package.json  pnpm-lock.yaml
evm/: .gitignore  .solhint.json  Makefile  README.md  export-abis.js  foundry.toml  hardhat.config.cjs  hardhat.config.ts  package.json  pnpm-lock.yaml  remappings.txt  tsconfig.json
evm/abi/: BaseNitroEnclavePermitter.json  BaseTaskHubNotifier.json  DelegatedTaskAcceptor.json  ExperimentalSsssHub.json  ExperimentalSsssPermitter.json  IIdentityRegistry.json  IPermitter.json  ITaskAcceptanceCriteria.json  ITaskAcceptor.json  ITaskHub.json  IdentityRegistry.json  MultiNitroEnclavePermitter.json  NE.json  OmniKeyStore.json  PermittedSubmitterTaskAcceptor.json  Permitter.json  Sig.json  SsssPermitter.json  StaticDelegatedTaskAcceptor.json  StaticNitroEnclavePermitter.json  TaskAcceptor.json  TaskHub.json  TaskHubNotifier.json  TaskIdSelectorOps.json  TimelockedDelegatedTaskAcceptor.json  TrustedRelayerPermitter.json  TrustedSubmitterTaskAcceptor.json  X509.json  index.ts
evm/broadcast/Deploy.s.sol/23295/: run-1695078307.json
evm/broadcast/Deploy.s.sol/42261/: run-latest.json
evm/contracts/enclave-identity/: AttestationToken.sol  Lockbox.sol
evm/contracts/identity/: AttestationToken.sol  Lockbox.sol  WorkerRegistry.sol
evm/contracts/identity/v1/: IIdentityRegistry.sol  IPermitter.sol  IdentityRegistry.sol  OmniKeyStore.sol  SsssHub.sol  Types.sol
evm/contracts/tasks/: ITaskGenerator.sol  ITaskHub.sol  TaskGenerator.sol  TaskHubHaver.sol  TasksV1.sol
evm/contracts/tasks/acceptor/: Base.sol  BaseTaskAcceptor.sol  Delegated.sol  DelegatedTaskAcceptor.sol  Haver.sol  ITaskAcceptor.sol  PermittedSubmitterTaskAcceptor.sol  TaskAcceptor.sol  TaskIdSelector.sol  TrustedSender.sol  TrustedSenderTaskAcceptor.sol  TrustedSubmitterTaskAcceptor.sol
evm/contracts/tasks/hub/: ITaskHub.sol  TaskHub.sol
evm/contracts/tasks/v1/: ITaskAcceptor.sol
evm/deploy/: 01_attestation_token.ts  02_lockbox.ts
evm/deploy/enclave-identity/: 01_attestation_token.ts  02_lockbox.ts
evm/deploy/identity/: 01_attestation_token.ts  02_lockbox.ts
evm/deploy/tasks/: 01_task_hub_v1.ts
evm/deployments/filecoin/: AttestationToken.json  Lockbox.json  TaskHubV1.json
evm/deployments/hyperspace/: AttestationToken.json  Lockbox.json  TaskHubV1.json
evm/deployments/sapphire/: AttestationToken.json  Lockbox.json  TaskHubV1.json
evm/deployments/sapphire-testnet/: AttestationToken.json  Lockbox.json  TaskHubV1.json
evm/lib/cjs/: index.d.ts  index.js  index.js.map
evm/lib/esm/: index.js  index.js.map
evm/salter/: Cargo.toml  README.md
evm/salter/src/: main.rs
evm/script/: Deploy.s.sol  TestEnv.s.sol
evm/scripts/: Deploy.s.sol
evm/src/: Types.sol  Utilities.sol  index.ts
evm/test/: Lockbox.ts
evm/test/identity/: Lockbox.t.sol  WorkerRegistry.t.sol
evm/tsconfig/: base.json  cjs.json  esm.json
hardhat/: package.json  pnpm-lock.yaml  tsconfig.json
hardhat/contracts/enclave-identity/: AttestationToken.sol  Lockbox.sol
hardhat/test/: Locker.ts
runner/: Dockerfile  README.md  bacalhau.Dockerfile  esbuild.js  lilypad.Dockerfile  oasisprotocol-sapphire-paratime-1.1.1.tgz  package.json  tsconfig.json  workerd_config.capnp
runner/deploy/: .terraform.lock.hcl  azure-sgx-vm.tf  docker-compose.yaml
runner/src/: error.ts  index.ts  main.ts  rpc.ts  service.ts  task-service.ts  utils.ts  worker-interface.ts
runner/src/env/: index.ts  sapphire.ts
runner/src/service/: env.ts  runner.ts
runner/src/svc/: run.ts
ssss/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix  rust-toolchain.toml  rustfmt.toml
ssss/deploy/aws/: README.md  main.tf  s4-infra.sh  terra_genesis.sh  tf-iam.json
ssss/deploy/aws/tf_state/: main.tf
ssss/deploy/azure/: README.md  backend.tf  main.tf  provider.tf  s4-infra.sh
ssss/deploy/azure/tf_state/: main.tf
ssss/nix/devshell/: flake-module.nix
ssss/nix/rust-overlay/: flake-module.nix
ssss/s4/: Cargo.toml  build.rs
ssss/s4/src/: cli.rs  generate-proof.cjs  lib.rs  main.rs
ssss/src/: api.rs  cli.rs  conf.rs  eth.rs  identity.rs  keypair.rs  lib.rs  main.rs  sync.rs  types.rs  utils.rs
ssss/src/api/: auth.rs  middleware.rs  mod.rs
ssss/src/backend/: aws.rs  azure.rs  local.rs  memory.rs  mod.rs  tests.rs
ssss/src/sstore/: aws.rs  dynamodb.rs  memory.rs  mod.rs
ssss/src/store/: aws.rs  azure.rs  local.rs  memory.rs  mod.rs  tests.rs
ssss/src/sync/: eth.rs  mod.rs
ssss/src/types/: api.rs  mod.rs
ssss/src/verify/: mod.rs
ssss/src/verify/nitro/: mod.rs
website/: .gitignore  .postcssrc.json  README.md  astro.config.mjs  index.md  package.json  tailwind.config.cjs
website/.vitepress/: config.ts
website/.vitepress/theme/: SponsorsBox.vue  index.ts  style.css
website/docs/: first-task.md  index.md
website/docs/apps/: nanobridge.dot  nanobridges.md
website/docs/network/: index.md
website/docs/reference/: diagram.dot  runner.md  ssss.dot  ssss.md  worker.md
website/docs/tutorial/: first-identity.md  first-task.md  first-worker.md  secret-worker.md
website/src/: consts.ts
website/src/components/: HeadSEO.astro
website/src/layouts/: MainLayout.astro
website/src/pages/: [...slug].astro  index.astro
worker/: .gitignore  Dockerfile  README.md  esbuild.js  eslint.config.js  jest.config.cjs  oasisprotocol-sapphire-paratime-1.2.2.tgz  package.json  tsconfig.json  tsconfig.lib.json  workerd_config.capnp
worker/config/: base.capnp  local.capnp  ne.capnp
worker/deploy/: azure-sgx-vm.tf  docker-compose.yaml
worker/src/: index.ts  rpc.ts  runner.ts
worker/src/env/: nsm.ts
worker/src/env/iam/: index.ts  (+5 more)
worker/src/ssss/: crypto.ts  index.ts  types.ts  utils.ts  vss.ts
worker/test/: fetch.ts  ne.ts
worker/test/ssss/: vss.spec.ts
worker/test/worker/: fetch.ts  ne.ts
(+49 files in other folders)
