[package]
name = "ssss"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11.1"
anyhow = "1.0.79"
aws-config = { version = "1.1.2", optional = true }
aws-sdk-dynamodb = { version = "1.10.0", optional = true }
aws-sdk-kms = { version = "1.10.0", optional = true }
axum = { version = "0.7.3", default-features = false, features = ["json", "http1", "http2", "query", "tokio"] }
clap = { version = "4.4.16", features = ["derive"] }
ethers = { version = "2.0.11", features = ["ws"] }
futures = { version = "0.3.30", default-features = false, features = ["std"] }
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
url = { version = "2.5.0", features = ["serde"] }
zeroize = { version = "1.7.0", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1

[features]
default = ["aws"]
aws = [
  "dep:aws-config",
  "dep:aws-sdk-dynamodb",
  "dep:aws-sdk-kms",
]
