[workspace]
members = ["s4"]

[package]
name = "ssss"
version = "1.0.0-alpha.1"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11.1"
anyhow = "1.0.79"
aws-config = { version = "1.1.2", optional = true }
aws-sdk-dynamodb = { version = "1.10.0", optional = true }
aws-sdk-kms = { version = "1.23.0", optional = true }
axum = { version = "0.7.3", default-features = false, features = ["json", "http1", "http2", "query", "tokio", "tower-log", "macros", "original-uri"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
azure_core = { version = "0.19.0", optional = true }
azure_data_tables = { version = "0.19.0", optional = true, features = ["enable_reqwest_rustls"] }
azure_identity = { version = "0.19.0", optional = true, default-features = false, features = ["enable_reqwest", "enable_reqwest_rustls", "azureauth_cli"] }
azure_security_keyvault = { version = "0.19.0", optional = true, features = ["enable_reqwest_rustls"] }
base64 = "0.22.1"
ciborium = "0.2.1"
clap = { version = "4.4.16", features = ["derive"] }
coset = { version = "0.3.6", features = ["std"] }
ethers = { version = "2.0.14", default-features = false, features = ["eip712", "abigen", "abigen-offline", "rustls"] }
futures-util = "0.3.30"
hex = { version = "0.4.3", features = ["serde"] }
http-body = "1.0.0"
once_cell = "1.19.0"
p384 = { version = "0.13.0", default-features = false, features = ["std", "ecdh", "pem", "serde"] }
paste = "1.0.14"
pin-project-lite = "0.2.13"
rand = "0.8.5"
ring = "0.17.7"
rusqlite = { version = "0.31.0", optional = true, features = ["bundled"] }
rustls-webpki = { version = "0.102.1", features = ["std"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.116", features = ["raw_value"] }
sha2 = "0.10.8"
smallvec = { version = "1.12.0", features = ["const_generics", "serde"] }
thiserror = "1.0.56"
tiny-keccak = "2.0.2"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "sync"] }
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
url = { version = "2.5.0", features = ["serde"] }
vsss-rs = "=4.3.0"
zeroize = { version = "1.7.0", features = ["derive", "aarch64", "alloc", "std"] }

[features]
default = ["aws", "azure", "local"]
aws = [
  "dep:aws-config",
  "dep:aws-sdk-dynamodb",
  "dep:aws-sdk-kms",
]
azure = [
  "dep:azure_core",
  "dep:azure_data_tables",
  "dep:azure_identity",
  "dep:azure_security_keyvault",
]
local = ["dep:rusqlite"]
azure_data_tables = ["dep:azure_data_tables"]
azure_core = ["dep:azure_core"]

[profile.release]
lto = true
codegen-units = 1
