[package]
name = "salter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.1.0"
hex = "0.4.3"
num_cpus = "1.16.0"
serde_json = "1.0.117"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[profile.release]
lto = true
codegen-units = 1
