[package]
name = "s4"
version = "0.1.0"
edition = "2021"

[dependencies]
brotli = "3.4.0"
clap = { version = "4.4.16", features = ["derive"] }
ethers = { version = "2.0.11", features = ["ws"] }
eyre = "0.6.12"
serde_json = "1.0.113"
ssss = { path = ".." }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

[features]
default = ["aws"]
aws = ["ssss/aws"]
