[package]
name = "s4"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11.1"
clap = { version = "4.4.16", features = ["derive"] }
elliptic-curve = { version = "0.13.8", features = ["jwk"] }
ethers = { version = "2.0.11", features = ["ws"] }
eyre = "0.6.12"
futures-util = "0.3.30"
headers = "0.4.0"
p384 = { version = "0.13.0", default-features = false, features = ["std", "ecdh"] }
rand = "0.8.5"
reqwest = { version = "0.11.26", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.113"
ssss = { path = "..", default-features = false }
tempfile = "3.10.1"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
url = "2.5.0"
vsss-rs = "=4.3.0"

[build-dependencies]
eyre = "0.6.12"
